tests/pyconverter-test/errors/array_empty.py
def f1():
    while True:
        x = [] # Causes error